--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,11 @@ html {
   overflow: hidden;
   background-color: #008083;
 }
+.hero-body{
+  padding:0;
+  width:100%;
+  height:100%;
+}
 
 .default{
   font-size: 15pt;
